--- a/pom.xml
+++ b/pom.xml
@@ -146,9 +146,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0-M7</version>
         <configuration>
-          <suiteXmlFiles>
-            <suiteXmlFile>testng_fail.xml</suiteXmlFile>
-          </suiteXmlFiles>
+          <suiteXmlFiles>testng-failed.xml </suiteXmlFiles>
         </configuration>
       </plugin>
 </plugins>
